test/errors/register.rom
Error in `register.asm` on line 1: Unknown register `Z`
